Add a little polish and refactoring

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <div id="input">
-        <div id="nonRentalsInput">
+        <div id="non-rentals-input">
             <label for="cup">Cup</label>
             <select id="cup" name="cup">
                 <option value="poke-poke-r1">Poké Cup Poké Ball R1</option>
@@ -58,10 +58,10 @@
             <label for="trainer">Trainer</label>
             <select id="trainer" name="trainer">
             </select>
-            <label for="useRoundTwoRentals">Use Round 2 rentals?</label>
-            <input type="checkbox" name="useRoundTwoRentals" id="useRoundTwoRentals">
+            <label for="use-round-two-rentals">Use Round 2 rentals?</label>
+            <input type="checkbox" name="use-round-two-rentals" id="use-round-two-rentals">
         </div>
-        <ol id="rentalSelections">
+        <ol id="rental-selections">
             <li>
                 <select></select>
             </li>
@@ -85,11 +85,11 @@
 
     <ol id="team">
         <li class="pokemon">
-            <div class="pokemonData">
+            <div class="pokemon-data">
                 <div class="species">
                     <p class="name"></p>
                     <img class="sprite" src="sprite-trans.png">
-                    <p class="heldItem"></p>
+                    <p class="held-item"></p>
                 </div>
                 <table class="stats">
                     <tr class="hp">
@@ -131,14 +131,15 @@
                 <li></li>
                 <li></li>
                 <li></li>
+                <li class="total-fitness"></li>
             </ol>
         </li>
         <li class="pokemon">
-            <div class="pokemonData">
+            <div class="pokemon-data">
                 <div class="species">
                     <p class="name"></p>
                     <img class="sprite" src="sprite-trans.png">
-                    <p class="heldItem"></p>
+                    <p class="held-item"></p>
                 </div>
                 <table class="stats">
                     <tr class="hp">
@@ -180,14 +181,15 @@
                 <li></li>
                 <li></li>
                 <li></li>
+                <li class="total-fitness"></li>
             </ol>
         </li>
         <li class="pokemon">
-            <div class="pokemonData">
+            <div class="pokemon-data">
                 <div class="species">
                     <p class="name"></p>
                     <img class="sprite" src="sprite-trans.png">
-                    <p class="heldItem"></p>
+                    <p class="held-item"></p>
                 </div>
                 <table class="stats">
                     <tr class="hp">
@@ -229,14 +231,15 @@
                 <li></li>
                 <li></li>
                 <li></li>
+                <li class="total-fitness"></li>
             </ol>
         </li>
         <li class="pokemon">
-            <div class="pokemonData">
+            <div class="pokemon-data">
                 <div class="species">
                     <p class="name"></p>
                     <img class="sprite" src="sprite-trans.png">
-                    <p class="heldItem"></p>
+                    <p class="held-item"></p>
                 </div>
                 <table class="stats">
                     <tr class="hp">
@@ -278,14 +281,15 @@
                 <li></li>
                 <li></li>
                 <li></li>
+                <li class="total-fitness"></li>
             </ol>
         </li>
         <li class="pokemon">
-            <div class="pokemonData">
+            <div class="pokemon-data">
                 <div class="species">
                     <p class="name"></p>
                     <img class="sprite" src="sprite-trans.png">
-                    <p class="heldItem"></p>
+                    <p class="held-item"></p>
                 </div>
                 <table class="stats">
                     <tr class="hp">
@@ -327,14 +331,15 @@
                 <li></li>
                 <li></li>
                 <li></li>
+                <li class="total-fitness"></li>
             </ol>
         </li>
         <li class="pokemon">
-            <div class="pokemonData">
+            <div class="pokemon-data">
                 <div class="species">
                     <p class="name"></p>
                     <img class="sprite" src="sprite-trans.png">
-                    <p class="heldItem"></p>
+                    <p class="held-item"></p>
                 </div>
                 <table class="stats">
                     <tr class="hp">
@@ -376,13 +381,14 @@
                 <li></li>
                 <li></li>
                 <li></li>
+                <li class="total-fitness"></li>
             </ol>
         </li>
     </ol>
 
-    <ul id="aiOpponentQuirks"></ul>
+    <ul id="ai-opponent-quirks"></ul>
 
-    <table id="potentialTeams">
+    <table id="potential-teams">
         <caption>Potential Teams</caption>
         <thead>
             <tr>
@@ -390,7 +396,7 @@
                 <th scope="col">Lead</th>
             </tr>
         </thead>
-        <tbody id="potentialTeamsBody"></tbody>
+        <tbody id="potential-teams-body"></tbody>
     </table>
 </body>
 
