Add Earl's Academy trainers

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 <option value="blackthorn-r2">Blackthorn Gym R2</option>
                 <option value="elite-four-r2">Elite Four R2</option>
                 <option value="kanto-r2">Kanto R2</option>
+                <option value="earl-trainer">Earl's Academy Trainer Class</option>
+                <option value="earl-gym-leader">Earl's Academy Gym Leader Class</option>
+                <option value="earl-elite-four">Earl's Academy Elite Four Class</option>
             </select>
             <label for="trainer">Trainer</label>
             <select id="trainer" name="trainer">
