Provide team probabilities

--- a/index.html
+++ b/index.html
@@ -396,8 +396,7 @@
         <thead>
             <tr>
                 <th scope="col">Team</th>
-                <th scope="col">Lead</th>
-                <th scope="col">Seed</th>
+                <th scope="col">Probability</th>
             </tr>
         </thead>
         <tbody id="potential-teams-body"></tbody>
